# Address-Book

./: addressbook.db  readme.md  run.bat  setup.bat
backend/: api_models.py  config.py  crud.py  db_models.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/instance/: addressbook.db
backend/src/: __init__.py  config.py  dependencies.py  exceptions.py  token_manager.py
backend/src/auth/: api_models.py  crud.py  password_manager.py  routes.py  token_manager.py  user_service.py
backend/src/contacts/: api_models.py  contact_service.py  crud.py  routes.py
backend/src/db/: db_models.py
backend/src/exc/: api_models.py  exceptions.py  exceptions_handlers.py
batch/: run_db.bat  run_web.bat
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  constants.ts  main.tsx  types.ts
frontend/src/Components/: ContactTable.tsx  Dialogs.tsx  Navbar.tsx  OneFieldDialog.tsx  PendingButton.tsx  StyledSnackbar.tsx  Table.tsx  WarningDialog.tsx
frontend/src/Contexts/: ContactAPIContext.tsx  UserAPIContext.tsx
frontend/src/Routes/: ContactTablePage.tsx  ErrorPage.tsx  Login.tsx  Register.tsx
frontend/src/Routes/ContactTable/: ContactTable.tsx  ContactTablePage.tsx  Table.tsx
frontend/src/Routes/Settings/: CategoryItem.tsx  CosmeticsSettings.tsx  SecuritySettings.tsx  UserSettings.tsx
frontend/src/hooks/: useContactTableData.tsx  useTableOptions.tsx  useTokensCookies.tsx
